<?xml version="1.0"?>
<package format="2">
  <name>lookahead_control</name>
  <version>0.0.0</version>
  <description>
    Look-ahead control is a feedback controller for nonholonomic mobile
    robot systems. The mobile robot follows a predefined point a set distance
    from the center of the robot. The look-ahead controller is designed by
    using input-output linearization and nonholonomic constraint equations.
  </description>
  <maintainer email="mathapua@gmail.com">Timothy Pua</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
